// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Persona renders Persona children correctly 1`] = `
<div
  class=
      ms-Persona
      ms-Persona--size48
      {
        -moz-osx-font-smoothing: grayscale;
        -webkit-font-smoothing: antialiased;
        align-items: center;
        box-shadow: none;
        box-sizing: border-box;
        color: #323130;
        display: flex;
        font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
        font-size: 14px;
        font-weight: 400;
        height: 48px;
        margin-bottom: 0px;
        margin-left: 0px;
        margin-right: 0px;
        margin-top: 0px;
        min-width: 48px;
        padding-bottom: 0px;
        padding-left: 0px;
        padding-right: 0px;
        padding-top: 0px;
        position: relative;
      }
      & .contextualHost {
        display: none;
      }
>
  <div
    class=
        ms-Persona-coin
        ms-Persona--size48
        {
          -moz-osx-font-smoothing: grayscale;
          -webkit-font-smoothing: antialiased;
          font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
          font-size: 14px;
          font-weight: 400;
        }
    role="presentation"
  >
    <div
      class=
          ms-Persona-imageArea
          {
            flex: 0 0 auto;
            height: 48px;
            position: relative;
            text-align: center;
            width: 48px;
          }
      role="presentation"
    >
      <div
        aria-hidden="true"
        class=
            ms-Persona-initials
            {
              background-color: #498205;
              border-radius: 50%;
              color: #ffffff;
              font-size: 16px;
              font-weight: 600;
              height: 48px;
              line-height: 46px;
            }
            @media screen and (-ms-high-contrast: active), screen and (forced-colors: active){& {
              -ms-high-contrast-adjust: none;
              background-color: Window !important;
              border: 1px solid WindowText;
              box-sizing: border-box;
              color: WindowText;
              forced-color-adjust: none;
            }
            & i {
              font-weight: 600;
            }
      >
        <span>
          KL
        </span>
      </div>
    </div>
  </div>
  <div
    class=
        ms-Persona-details
        {
          display: flex;
          flex-direction: column;
          justify-content: space-around;
          min-width: 0px;
          padding-bottom: 0;
          padding-left: 12px;
          padding-right: 12px;
          padding-top: 0;
          text-align: left;
          width: 100%;
        }
  >
    <div
      class=
          ms-Persona-primaryText
          {
            color: #323130;
            font-size: 14px;
            font-weight: 400;
            overflow: hidden;
            text-overflow: ellipsis;
            white-space: nowrap;
          }
          &:hover {
            color: #201f1e;
          }
      dir="auto"
    >
      <div
        class=
            ms-TooltipHost
            {
              display: inline;
            }
        role="none"
      >
        Kat Larrson
        <div
          hidden=""
          id="tooltip15"
          style="position: absolute; width: 1px; height: 1px; margin: -1px; padding: 0px; border: 0px; overflow: hidden; white-space: nowrap;"
        >
          Kat Larrson
        </div>
      </div>
    </div>
    <span>
      Persona Children
    </span>
  </div>
</div>
`;

exports[`Persona renders Persona correctly with UnknownPersona coin 1`] = `
<div
  class=
      ms-Persona
      ms-Persona--size48
      {
        -moz-osx-font-smoothing: grayscale;
        -webkit-font-smoothing: antialiased;
        align-items: center;
        box-shadow: none;
        box-sizing: border-box;
        color: #323130;
        display: flex;
        font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
        font-size: 14px;
        font-weight: 400;
        height: 48px;
        margin-bottom: 0px;
        margin-left: 0px;
        margin-right: 0px;
        margin-top: 0px;
        min-width: 48px;
        padding-bottom: 0px;
        padding-left: 0px;
        padding-right: 0px;
        padding-top: 0px;
        position: relative;
      }
      & .contextualHost {
        display: none;
      }
>
  <div
    class=
        ms-Persona-coin
        ms-Persona--size48
        {
          -moz-osx-font-smoothing: grayscale;
          -webkit-font-smoothing: antialiased;
          font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
          font-size: 14px;
          font-weight: 400;
        }
    role="presentation"
  >
    <div
      class=
          ms-Persona-imageArea
          {
            flex: 0 0 auto;
            height: 48px;
            position: relative;
            text-align: center;
            width: 48px;
          }
      role="presentation"
    >
      <div
        aria-hidden="true"
        class=
            ms-Persona-initials
            {
              background-color: rgb(234, 234, 234);
              border-radius: 50%;
              color: rgb(168, 0, 0);
              font-size: 16px;
              font-weight: 600;
              height: 48px;
              line-height: 46px;
            }
            @media screen and (-ms-high-contrast: active), screen and (forced-colors: active){& {
              -ms-high-contrast-adjust: none;
              background-color: Window !important;
              border: 1px solid WindowText;
              box-sizing: border-box;
              color: WindowText;
              forced-color-adjust: none;
            }
            & i {
              font-weight: 600;
            }
      >
        <i
          aria-hidden="true"
          class=

              {
                -moz-osx-font-smoothing: grayscale;
                -webkit-font-smoothing: antialiased;
                display: inline-block;
                font-family: "FabricMDL2Icons-1";
                font-style: normal;
                font-weight: normal;
                speak: none;
                text-decoration: inherit;
              }
          data-icon-name="Help"
        >
          
        </i>
      </div>
    </div>
  </div>
  <div
    class=
        ms-Persona-details
        {
          display: flex;
          flex-direction: column;
          justify-content: space-around;
          min-width: 0px;
          padding-bottom: 0;
          padding-left: 12px;
          padding-right: 12px;
          padding-top: 0;
          text-align: left;
          width: 100%;
        }
  >
    <div
      class=
          ms-Persona-primaryText
          {
            color: #323130;
            font-size: 14px;
            font-weight: 400;
            overflow: hidden;
            text-overflow: ellipsis;
            white-space: nowrap;
          }
          &:hover {
            color: #201f1e;
          }
      dir="auto"
    >
      <div
        class=
            ms-TooltipHost
            {
              display: inline;
            }
        role="none"
      >
        Kat Larrson
        <div
          hidden=""
          id="tooltip2"
          style="position: absolute; width: 1px; height: 1px; margin: -1px; padding: 0px; border: 0px; overflow: hidden; white-space: nowrap;"
        >
          Kat Larrson
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Persona renders Persona correctly with image 1`] = `
<div
  class=
      ms-Persona
      ms-Persona--size48
      {
        -moz-osx-font-smoothing: grayscale;
        -webkit-font-smoothing: antialiased;
        align-items: center;
        box-shadow: none;
        box-sizing: border-box;
        color: #323130;
        display: flex;
        font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
        font-size: 14px;
        font-weight: 400;
        height: 48px;
        margin-bottom: 0px;
        margin-left: 0px;
        margin-right: 0px;
        margin-top: 0px;
        min-width: 48px;
        padding-bottom: 0px;
        padding-left: 0px;
        padding-right: 0px;
        padding-top: 0px;
        position: relative;
      }
      & .contextualHost {
        display: none;
      }
>
  <div
    class=
        ms-Persona-coin
        ms-Persona--size48
        {
          -moz-osx-font-smoothing: grayscale;
          -webkit-font-smoothing: antialiased;
          font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
          font-size: 14px;
          font-weight: 400;
        }
    role="presentation"
  >
    <div
      class=
          ms-Persona-imageArea
          {
            flex: 0 0 auto;
            height: 48px;
            position: relative;
            text-align: center;
            width: 48px;
          }
      role="presentation"
    >
      <div
        class=
            ms-Image
            ms-Persona-image
            {
              -moz-osx-font-smoothing: grayscale;
              -webkit-font-smoothing: antialiased;
              border-radius: 50%;
              border: 0px;
              font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
              font-size: 14px;
              font-weight: 400;
              height: 48px;
              left: 0px;
              margin-right: 10px;
              overflow: hidden;
              perspective: 1px;
              position: absolute;
              top: 0px;
              width: 48px;
            }
        style="width: 48px; height: 48px;"
      >
        <img
          alt=""
          class=
              ms-Image-image
              ms-Image-image--cover
              ms-Image-image--portrait
              is-notLoaded
              is-fadeIn
              {
                display: block;
                height: 100%;
                object-fit: cover;
                opacity: 0;
                width: 100%;
              }
          src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAYAAAAfFcSJAAAAC0lEQVQImWP4DwQACfsD/eNV8pwAAAAASUVORK5CYII="
        />
      </div>
    </div>
  </div>
  <div
    class=
        ms-Persona-details
        {
          display: flex;
          flex-direction: column;
          justify-content: space-around;
          min-width: 0px;
          padding-bottom: 0;
          padding-left: 12px;
          padding-right: 12px;
          padding-top: 0;
          text-align: left;
          width: 100%;
        }
  >
    <div
      class=
          ms-Persona-primaryText
          {
            color: #323130;
            font-size: 14px;
            font-weight: 400;
            overflow: hidden;
            text-overflow: ellipsis;
            white-space: nowrap;
          }
          &:hover {
            color: #201f1e;
          }
      dir="auto"
    >
      <div
        class=
            ms-TooltipHost
            {
              display: inline;
            }
        role="none"
      >
        Kat Larrson
        <div
          hidden=""
          id="tooltip1"
          style="position: absolute; width: 1px; height: 1px; margin: -1px; padding: 0px; border: 0px; overflow: hidden; white-space: nowrap;"
        >
          Kat Larrson
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Persona renders Persona correctly with initials 1`] = `
<div
  class=
      ms-Persona
      ms-Persona--size48
      {
        -moz-osx-font-smoothing: grayscale;
        -webkit-font-smoothing: antialiased;
        align-items: center;
        box-shadow: none;
        box-sizing: border-box;
        color: #323130;
        display: flex;
        font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
        font-size: 14px;
        font-weight: 400;
        height: 48px;
        margin-bottom: 0px;
        margin-left: 0px;
        margin-right: 0px;
        margin-top: 0px;
        min-width: 48px;
        padding-bottom: 0px;
        padding-left: 0px;
        padding-right: 0px;
        padding-top: 0px;
        position: relative;
      }
      & .contextualHost {
        display: none;
      }
>
  <div
    class=
        ms-Persona-coin
        ms-Persona--size48
        {
          -moz-osx-font-smoothing: grayscale;
          -webkit-font-smoothing: antialiased;
          font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
          font-size: 14px;
          font-weight: 400;
        }
    role="presentation"
  >
    <div
      class=
          ms-Persona-imageArea
          {
            flex: 0 0 auto;
            height: 48px;
            position: relative;
            text-align: center;
            width: 48px;
          }
      role="presentation"
    >
      <div
        aria-hidden="true"
        class=
            ms-Persona-initials
            {
              background-color: #498205;
              border-radius: 50%;
              color: #ffffff;
              font-size: 16px;
              font-weight: 600;
              height: 48px;
              line-height: 46px;
            }
            @media screen and (-ms-high-contrast: active), screen and (forced-colors: active){& {
              -ms-high-contrast-adjust: none;
              background-color: Window !important;
              border: 1px solid WindowText;
              box-sizing: border-box;
              color: WindowText;
              forced-color-adjust: none;
            }
            & i {
              font-weight: 600;
            }
      >
        <span>
          KL
        </span>
      </div>
    </div>
  </div>
  <div
    class=
        ms-Persona-details
        {
          display: flex;
          flex-direction: column;
          justify-content: space-around;
          min-width: 0px;
          padding-bottom: 0;
          padding-left: 12px;
          padding-right: 12px;
          padding-top: 0;
          text-align: left;
          width: 100%;
        }
  >
    <div
      class=
          ms-Persona-primaryText
          {
            color: #323130;
            font-size: 14px;
            font-weight: 400;
            overflow: hidden;
            text-overflow: ellipsis;
            white-space: nowrap;
          }
          &:hover {
            color: #201f1e;
          }
      dir="auto"
    >
      <div
        class=
            ms-TooltipHost
            {
              display: inline;
            }
        role="none"
      >
        Kat Larrson
        <div
          hidden=""
          id="tooltip0"
          style="position: absolute; width: 1px; height: 1px; margin: -1px; padding: 0px; border: 0px; overflow: hidden; white-space: nowrap;"
        >
          Kat Larrson
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Persona renders Persona correctly with no props 1`] = `
<div
  class=
      ms-Persona
      ms-Persona--size48
      {
        -moz-osx-font-smoothing: grayscale;
        -webkit-font-smoothing: antialiased;
        align-items: center;
        box-shadow: none;
        box-sizing: border-box;
        color: #323130;
        display: flex;
        font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
        font-size: 14px;
        font-weight: 400;
        height: 48px;
        margin-bottom: 0px;
        margin-left: 0px;
        margin-right: 0px;
        margin-top: 0px;
        min-width: 48px;
        padding-bottom: 0px;
        padding-left: 0px;
        padding-right: 0px;
        padding-top: 0px;
        position: relative;
      }
      & .contextualHost {
        display: none;
      }
>
  <div
    class=
        ms-Persona-coin
        ms-Persona--size48
        {
          -moz-osx-font-smoothing: grayscale;
          -webkit-font-smoothing: antialiased;
          font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
          font-size: 14px;
          font-weight: 400;
        }
    role="presentation"
  >
    <div
      class=
          ms-Persona-imageArea
          {
            flex: 0 0 auto;
            height: 48px;
            position: relative;
            text-align: center;
            width: 48px;
          }
      role="presentation"
    >
      <div
        aria-hidden="true"
        class=
            ms-Persona-initials
            {
              background-color: #0078D4;
              border-radius: 50%;
              color: #ffffff;
              font-size: 16px;
              font-weight: 600;
              height: 48px;
              line-height: 46px;
            }
            @media screen and (-ms-high-contrast: active), screen and (forced-colors: active){& {
              -ms-high-contrast-adjust: none;
              background-color: Window !important;
              border: 1px solid WindowText;
              box-sizing: border-box;
              color: WindowText;
              forced-color-adjust: none;
            }
            & i {
              font-weight: 600;
            }
      >
        <i
          aria-hidden="true"
          class=

              {
                -moz-osx-font-smoothing: grayscale;
                -webkit-font-smoothing: antialiased;
                display: inline-block;
                font-family: "FabricMDL2Icons-0";
                font-style: normal;
                font-weight: normal;
                speak: none;
                text-decoration: inherit;
              }
          data-icon-name="Contact"
        >
          
        </i>
      </div>
    </div>
  </div>
  <div
    class=
        ms-Persona-details
        {
          display: flex;
          flex-direction: column;
          justify-content: space-around;
          min-width: 0px;
          padding-bottom: 0;
          padding-left: 12px;
          padding-right: 12px;
          padding-top: 0;
          text-align: left;
          width: 100%;
        }
  />
</div>
`;

exports[`Persona renders Persona which calls onRenderCoin callback without imageUrl 1`] = `
<div
  class=
      ms-Persona
      ms-Persona--size100
      ms-Persona--blocked
      {
        -moz-osx-font-smoothing: grayscale;
        -webkit-font-smoothing: antialiased;
        align-items: center;
        box-shadow: none;
        box-sizing: border-box;
        color: #323130;
        display: flex;
        font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
        font-size: 14px;
        font-weight: 400;
        height: 100px;
        margin-bottom: 0px;
        margin-left: 0px;
        margin-right: 0px;
        margin-top: 0px;
        min-width: 100px;
        padding-bottom: 0px;
        padding-left: 0px;
        padding-right: 0px;
        padding-top: 0px;
        position: relative;
      }
      & .contextualHost {
        display: none;
      }
>
  <div
    class=
        ms-Persona-coin
        ms-Persona--size100
        {
          -moz-osx-font-smoothing: grayscale;
          -webkit-font-smoothing: antialiased;
          font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
          font-size: 14px;
          font-weight: 400;
        }
    role="presentation"
  >
    <div
      class=
          ms-Persona-imageArea
          {
            flex: 0 0 auto;
            height: 100px;
            position: relative;
            text-align: center;
            width: 100px;
          }
      role="presentation"
    >
      <div
        aria-hidden="true"
        class=
            ms-Persona-initials
            {
              background-color: #8E562E;
              border-radius: 50%;
              color: #ffffff;
              font-size: 42px;
              font-weight: 600;
              height: 100px;
              line-height: 100px;
            }
            @media screen and (-ms-high-contrast: active), screen and (forced-colors: active){& {
              -ms-high-contrast-adjust: none;
              background-color: Window !important;
              border: 1px solid WindowText;
              box-sizing: border-box;
              color: WindowText;
              forced-color-adjust: none;
            }
            & i {
              font-weight: 600;
            }
      >
        <span>
          SV
        </span>
      </div>
      <span
        id="persona-coin-container"
      />
      <div
        class=
            ms-Persona-presence
            {
              -ms-high-contrast-adjust: none;
              background-clip: border-box;
              background-color: #ffffff;
              border-radius: 50%;
              border: 2px solid #ffffff;
              bottom: -2px;
              box-sizing: content-box;
              forced-color-adjust: none;
              height: 28px;
              position: absolute;
              right: -2px;
              text-align: center;
              top: auto;
              width: 28px;
            }
            @media screen and (-ms-high-contrast: active), screen and (forced-colors: active){& {
              background-color: WindowText;
              border-color: Window;
            }
            &:after {
              background-color: #C43148;
              content: "";
              height: 2px;
              left: 0px;
              position: absolute;
              top: 50%;
              transform: translateY(-50%) rotate(-45deg);
              width: 100%;
            }
            @media screen and (-ms-high-contrast: active), screen and (forced-colors: active){&:after {
              background-color: Window;
              left: 2px;
              width: calc(100% - 4px);
            }
            &:before {
              border-radius: 50%;
              border: 2px solid #C43148;
              box-sizing: border-box;
              content: "";
              height: 100%;
              left: 0px;
              position: absolute;
              top: 0px;
              width: 100%;
            }
            @media screen and (-ms-high-contrast: active), screen and (forced-colors: active){&:before {
              border-color: Window;
              height: calc(100% - 2px);
              left: 1px;
              top: 1px;
              width: calc(100% - 2px);
            }
        role="presentation"
      >
        <i
          aria-hidden="true"
          class=
              ms-Icon-placeHolder
              ms-Persona-presenceIcon
              {
                color: #ffffff;
                display: inline-block;
                font-size: 14px;
                line-height: 28px;
                text-decoration: inherit;
                vertical-align: top;
                width: 1em;
              }
              @media screen and (-ms-high-contrast: active), screen and (forced-colors: active){& {
                color: Window;
              }
          data-icon-name=""
        />
      </div>
    </div>
  </div>
  <div
    class=
        ms-Persona-details
        {
          display: flex;
          flex-direction: column;
          justify-content: space-around;
          min-width: 0px;
          padding-bottom: 0;
          padding-left: 16px;
          padding-right: 24px;
          padding-top: 0;
          text-align: left;
          width: 100%;
        }
  >
    <div
      class=
          ms-Persona-primaryText
          {
            color: #323130;
            font-size: 20px;
            font-weight: 400;
            overflow: hidden;
            text-overflow: ellipsis;
            white-space: nowrap;
          }
          &:hover {
            color: #201f1e;
          }
      dir="auto"
    >
      <div
        class=
            ms-TooltipHost
            {
              display: inline;
            }
        role="none"
      >
        Swapnil Vaibhav
        <div
          hidden=""
          id="tooltip3"
          style="position: absolute; width: 1px; height: 1px; margin: -1px; padding: 0px; border: 0px; overflow: hidden; white-space: nowrap;"
        >
          Swapnil Vaibhav
        </div>
      </div>
    </div>
    <div
      class=
          ms-Persona-secondaryText
          {
            color: #605e5c;
            font-size: 14px;
            font-weight: 400;
            overflow: hidden;
            text-overflow: ellipsis;
            white-space: nowrap;
          }
      dir="auto"
    >
      <div
        class=
            ms-TooltipHost
            {
              display: inline;
            }
        role="none"
      >
        Software Engineer
        <div
          hidden=""
          id="tooltip4"
          style="position: absolute; width: 1px; height: 1px; margin: -1px; padding: 0px; border: 0px; overflow: hidden; white-space: nowrap;"
        >
          Software Engineer
        </div>
      </div>
    </div>
    <div
      class=
          ms-Persona-tertiaryText
          {
            color: #605e5c;
            display: block;
            font-size: 14px;
            font-weight: 400;
            overflow: hidden;
            text-overflow: ellipsis;
            white-space: nowrap;
          }
      dir="auto"
    >
      <div
        class=
            ms-TooltipHost
            {
              display: inline;
            }
        role="none"
      >
        In a meeting
        <div
          hidden=""
          id="tooltip5"
          style="position: absolute; width: 1px; height: 1px; margin: -1px; padding: 0px; border: 0px; overflow: hidden; white-space: nowrap;"
        >
          In a meeting
        </div>
      </div>
    </div>
    <div
      class=
          ms-Persona-optionalText
          {
            color: #605e5c;
            display: block;
            font-size: 14px;
            font-weight: 400;
            overflow: hidden;
            text-overflow: ellipsis;
            white-space: nowrap;
          }
      dir="auto"
    >
      <div
        class=
            ms-TooltipHost
            {
              display: inline;
            }
        role="none"
      >
        Available at 4:00pm
        <div
          hidden=""
          id="tooltip6"
          style="position: absolute; width: 1px; height: 1px; margin: -1px; padding: 0px; border: 0px; overflow: hidden; white-space: nowrap;"
        >
          Available at 4:00pm
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Persona renders Persona which calls onRenderPersonaCoin callback with custom render 1`] = `
<div
  class=
      ms-Persona
      ms-Persona--size100
      ms-Persona--blocked
      {
        -moz-osx-font-smoothing: grayscale;
        -webkit-font-smoothing: antialiased;
        align-items: center;
        box-shadow: none;
        box-sizing: border-box;
        color: #323130;
        display: flex;
        font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
        font-size: 14px;
        font-weight: 400;
        height: 100px;
        margin-bottom: 0px;
        margin-left: 0px;
        margin-right: 0px;
        margin-top: 0px;
        min-width: 100px;
        padding-bottom: 0px;
        padding-left: 0px;
        padding-right: 0px;
        padding-top: 0px;
        position: relative;
      }
      & .contextualHost {
        display: none;
      }
>
  <i
    aria-hidden="true"
    class=

        {
          -moz-osx-font-smoothing: grayscale;
          -webkit-font-smoothing: antialiased;
          display: inline-block;
          font-family: "FabricMDL2Icons-1";
          font-style: normal;
          font-weight: normal;
          speak: none;
          text-decoration: inherit;
        }
    data-icon-name="Dictionary"
  >
    
  </i>
  <div
    class=
        ms-Persona-details
        {
          display: flex;
          flex-direction: column;
          justify-content: space-around;
          min-width: 0px;
          padding-bottom: 0;
          padding-left: 16px;
          padding-right: 24px;
          padding-top: 0;
          text-align: left;
          width: 100%;
        }
  >
    <div
      class=
          ms-Persona-primaryText
          {
            color: #323130;
            font-size: 20px;
            font-weight: 400;
            overflow: hidden;
            text-overflow: ellipsis;
            white-space: nowrap;
          }
          &:hover {
            color: #201f1e;
          }
      dir="auto"
    >
      <div
        class=
            ms-TooltipHost
            {
              display: inline;
            }
        role="none"
      >
        Swapnil Vaibhav
        <div
          hidden=""
          id="tooltip7"
          style="position: absolute; width: 1px; height: 1px; margin: -1px; padding: 0px; border: 0px; overflow: hidden; white-space: nowrap;"
        >
          Swapnil Vaibhav
        </div>
      </div>
    </div>
    <div
      class=
          ms-Persona-secondaryText
          {
            color: #605e5c;
            font-size: 14px;
            font-weight: 400;
            overflow: hidden;
            text-overflow: ellipsis;
            white-space: nowrap;
          }
      dir="auto"
    >
      <div
        class=
            ms-TooltipHost
            {
              display: inline;
            }
        role="none"
      >
        Software Engineer
        <div
          hidden=""
          id="tooltip8"
          style="position: absolute; width: 1px; height: 1px; margin: -1px; padding: 0px; border: 0px; overflow: hidden; white-space: nowrap;"
        >
          Software Engineer
        </div>
      </div>
    </div>
    <div
      class=
          ms-Persona-tertiaryText
          {
            color: #605e5c;
            display: block;
            font-size: 14px;
            font-weight: 400;
            overflow: hidden;
            text-overflow: ellipsis;
            white-space: nowrap;
          }
      dir="auto"
    >
      <div
        class=
            ms-TooltipHost
            {
              display: inline;
            }
        role="none"
      >
        In a meeting
        <div
          hidden=""
          id="tooltip9"
          style="position: absolute; width: 1px; height: 1px; margin: -1px; padding: 0px; border: 0px; overflow: hidden; white-space: nowrap;"
        >
          In a meeting
        </div>
      </div>
    </div>
    <div
      class=
          ms-Persona-optionalText
          {
            color: #605e5c;
            display: block;
            font-size: 14px;
            font-weight: 400;
            overflow: hidden;
            text-overflow: ellipsis;
            white-space: nowrap;
          }
      dir="auto"
    >
      <div
        class=
            ms-TooltipHost
            {
              display: inline;
            }
        role="none"
      >
        Available at 4:00pm
        <div
          hidden=""
          id="tooltip10"
          style="position: absolute; width: 1px; height: 1px; margin: -1px; padding: 0px; border: 0px; overflow: hidden; white-space: nowrap;"
        >
          Available at 4:00pm
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Persona renders correctly with onRender callback 1`] = `
<div
  class=
      ms-Persona
      ms-Persona--size100
      ms-Persona--blocked
      {
        -moz-osx-font-smoothing: grayscale;
        -webkit-font-smoothing: antialiased;
        align-items: center;
        box-shadow: none;
        box-sizing: border-box;
        color: #323130;
        display: flex;
        font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
        font-size: 14px;
        font-weight: 400;
        height: 100px;
        margin-bottom: 0px;
        margin-left: 0px;
        margin-right: 0px;
        margin-top: 0px;
        min-width: 100px;
        padding-bottom: 0px;
        padding-left: 0px;
        padding-right: 0px;
        padding-top: 0px;
        position: relative;
      }
      & .contextualHost {
        display: none;
      }
>
  <div
    class=
        ms-Persona-coin
        ms-Persona--size100
        {
          -moz-osx-font-smoothing: grayscale;
          -webkit-font-smoothing: antialiased;
          font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
          font-size: 14px;
          font-weight: 400;
        }
    role="presentation"
  >
    <div
      class=
          ms-Persona-imageArea
          {
            flex: 0 0 auto;
            height: 100px;
            position: relative;
            text-align: center;
            width: 100px;
          }
      role="presentation"
    >
      <div
        class=
            ms-Image
            ms-Persona-image
            {
              -moz-osx-font-smoothing: grayscale;
              -webkit-font-smoothing: antialiased;
              border-radius: 50%;
              border: 0px;
              font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
              font-size: 14px;
              font-weight: 400;
              height: 100px;
              left: 0px;
              margin-right: 10px;
              overflow: hidden;
              perspective: 1px;
              position: absolute;
              top: 0px;
              width: 100px;
            }
        style="width: 100px; height: 100px;"
      >
        <img
          alt=""
          class=
              ms-Image-image
              ms-Image-image--cover
              ms-Image-image--portrait
              is-notLoaded
              is-fadeIn
              {
                display: block;
                height: 100%;
                object-fit: cover;
                opacity: 0;
                width: 100%;
              }
          src="https://res-1.cdn.office.net/files/fabric-cdn-prod_20230815.002/office-ui-fabric-react-assets/persona-male.png"
        />
      </div>
      <div
        class=
            ms-Persona-presence
            {
              -ms-high-contrast-adjust: none;
              background-clip: border-box;
              background-color: #ffffff;
              border-radius: 50%;
              border: 2px solid #ffffff;
              bottom: -2px;
              box-sizing: content-box;
              forced-color-adjust: none;
              height: 28px;
              position: absolute;
              right: -2px;
              text-align: center;
              top: auto;
              width: 28px;
            }
            @media screen and (-ms-high-contrast: active), screen and (forced-colors: active){& {
              background-color: WindowText;
              border-color: Window;
            }
            &:after {
              background-color: #C43148;
              content: "";
              height: 2px;
              left: 0px;
              position: absolute;
              top: 50%;
              transform: translateY(-50%) rotate(-45deg);
              width: 100%;
            }
            @media screen and (-ms-high-contrast: active), screen and (forced-colors: active){&:after {
              background-color: Window;
              left: 2px;
              width: calc(100% - 4px);
            }
            &:before {
              border-radius: 50%;
              border: 2px solid #C43148;
              box-sizing: border-box;
              content: "";
              height: 100%;
              left: 0px;
              position: absolute;
              top: 0px;
              width: 100%;
            }
            @media screen and (-ms-high-contrast: active), screen and (forced-colors: active){&:before {
              border-color: Window;
              height: calc(100% - 2px);
              left: 1px;
              top: 1px;
              width: calc(100% - 2px);
            }
        role="presentation"
      >
        <i
          aria-hidden="true"
          class=
              ms-Icon-placeHolder
              ms-Persona-presenceIcon
              {
                color: #ffffff;
                display: inline-block;
                font-size: 14px;
                line-height: 28px;
                text-decoration: inherit;
                vertical-align: top;
                width: 1em;
              }
              @media screen and (-ms-high-contrast: active), screen and (forced-colors: active){& {
                color: Window;
              }
          data-icon-name=""
        />
      </div>
    </div>
  </div>
  <div
    class=
        ms-Persona-details
        {
          display: flex;
          flex-direction: column;
          justify-content: space-around;
          min-width: 0px;
          padding-bottom: 0;
          padding-left: 16px;
          padding-right: 24px;
          padding-top: 0;
          text-align: left;
          width: 100%;
        }
  >
    <div
      class=
          ms-Persona-primaryText
          {
            color: #323130;
            font-size: 20px;
            font-weight: 400;
            overflow: hidden;
            text-overflow: ellipsis;
            white-space: nowrap;
          }
          &:hover {
            color: #201f1e;
          }
      dir="auto"
    >
      <div
        class=
            ms-TooltipHost
            {
              display: inline;
            }
        role="none"
      >
        Swapnil Vaibhav
        <div
          hidden=""
          id="tooltip11"
          style="position: absolute; width: 1px; height: 1px; margin: -1px; padding: 0px; border: 0px; overflow: hidden; white-space: nowrap;"
        >
          Swapnil Vaibhav
        </div>
      </div>
    </div>
    <div
      class=
          ms-Persona-secondaryText
          {
            color: #605e5c;
            font-size: 14px;
            font-weight: 400;
            overflow: hidden;
            text-overflow: ellipsis;
            white-space: nowrap;
          }
      dir="auto"
    >
      <div
        class=
            ms-TooltipHost
            {
              display: inline;
            }
        role="none"
      >
        Software Engineer
        <div
          hidden=""
          id="tooltip12"
          style="position: absolute; width: 1px; height: 1px; margin: -1px; padding: 0px; border: 0px; overflow: hidden; white-space: nowrap;"
        >
          Software Engineer
        </div>
      </div>
    </div>
    <div
      class=
          ms-Persona-tertiaryText
          {
            color: #605e5c;
            display: block;
            font-size: 14px;
            font-weight: 400;
            overflow: hidden;
            text-overflow: ellipsis;
            white-space: nowrap;
          }
      dir="auto"
    >
      <div
        class=
            ms-TooltipHost
            {
              display: inline;
            }
        role="none"
      >
        In a meeting
        <div
          hidden=""
          id="tooltip13"
          style="position: absolute; width: 1px; height: 1px; margin: -1px; padding: 0px; border: 0px; overflow: hidden; white-space: nowrap;"
        >
          In a meeting
        </div>
      </div>
    </div>
    <div
      class=
          ms-Persona-optionalText
          {
            color: #605e5c;
            display: block;
            font-size: 14px;
            font-weight: 400;
            overflow: hidden;
            text-overflow: ellipsis;
            white-space: nowrap;
          }
      dir="auto"
    >
      <div
        class=
            ms-TooltipHost
            {
              display: inline;
            }
        role="none"
      >
        Available at 4:00pm
        <div
          hidden=""
          id="tooltip14"
          style="position: absolute; width: 1px; height: 1px; margin: -1px; padding: 0px; border: 0px; overflow: hidden; white-space: nowrap;"
        >
          Available at 4:00pm
        </div>
      </div>
    </div>
  </div>
</div>
`;
